[project]
name = "comfyui-waveform-extensions"
description = "Some additional audio utilites for use on top of Sample Diffusion ComfyUI Extension"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/NeuralNotW0rk/ComfyUI-Waveform-Extensions"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "neural-not-work"
DisplayName = "ComfyUI-Waveform-Extensions"
Icon = ""
